apps/homelab/external/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-external
  namespace: external
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ha-external
  namespace: external
  labels:
    kubernetes.io/service-name: ha-external
subsets:
  - addresses:
      - ip: 10.10.0.4
    ports:
      - name: http
        port: 8123
        protocol: TCP
