apps/homelab/external/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha
  namespace: external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - ha.homelab.rookian.dev
      secretName: tls-ha-homelab
  rules:
    - host: ha.homelab.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-external
                port:
                  name: http
---
